mainfest/fraud-consumer-deployment-cluster-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-consumer
  namespace: fraud-detection
spec:
  replicas: 1
  # ADDED THIS SELECTOR BLOCK
  selector:
    matchLabels:
      app: fraud-consumer
  # UPDATED TEMPLATE METADATA
  template:
    metadata:
      labels:
        app: fraud-consumer
    spec:
      containers:
      - name: fraud-consumer
        image: docker.io/sandeshs/fraud-consumer:v1
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
