mainfest/fraud-consumer-deployment.yaml
#fraud-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-consumer
  namespace: fraud-detection
spec:
  replicas: 1
  selector:
    matchLabels: {app: fraud-consumer}
  template:
    metadata:
      labels: {app: fraud-consumer}
    spec:
      containers:
      - name: fraud-consumer
        image: docker.io/sandeshs/fraud-consumer:v1
