mainfest/bkpworkinginnormalip.yaml
# mainfest/fraud-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-api
  namespace: fraud-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-api
  template:
    metadata:
      labels:
        app: fraud-api
    spec:
      containers:
      - name: fraud-api
        # Updated to your Docker Hub repository
        image: docker.io/sandeshs/fraud-api:v1
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: '500m'
            memory: '512Mi'
          limits:
            cpu: '2000m'
            memory: '2Gi'
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 45 # Increased slightly to allow model loading
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-api-svc
  namespace: fraud-detection
spec:
  selector:
    app: fraud-api
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
