mainfest/fraud-api-deployment.yaml
# mainfest/fraud-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-api
  namespace: fraud-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-api
  template:
    metadata:
      labels:
        app: fraud-api
    spec:
      containers:
      - name: fraud-api
        # Updated image tag to v3 (reflecting your .dockerignore fix)
        image: us-central1-docker.pkg.dev/project-d1a95002-78b0-493b-b7e/fraud-repo/fraud-api:v12
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: '500m'
            memory: '512Mi'
          limits:
            cpu: '2000m'
            memory: '2Gi'
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-api-svc
  namespace: fraud-detection
spec:
  selector:
    app: fraud-api
  ports:
  - port: 80
    targetPort: 8000
  type: LoadBalancer
