mainfest/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: fraud-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: zookeeper
        image: confluentinc/cp-zookeeper:7.4.0
        env: [{name: ZOOKEEPER_CLIENT_PORT, value: "2181"}]
      - name: kafka
        image: confluentinc/cp-kafka:7.4.0
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: fraud-detection
spec:
  selector: {app: kafka}
  ports: [{port: 9092, targetPort: 9092}]
