mainfest/global-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: global-fraud-gateway
  namespace: fraud-detection
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: fraud-api-route
  namespace: fraud-detection
spec:
  parentRefs:
  - name: global-fraud-gateway
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport # Points to the exported service
      name: fraud-api-svc
      port: 80
